CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(MARK1)
AUX_SOURCE_DIRECTORY(. SRC_LIST)
INCLUDE_DIRECTORIES(.)

# ADD_SUBDIRECTORY(module/logger)

# ADD_EXECUTABLE(logger ${SRC_LIST})

# SET (EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

# FIND_PACKAGE(Threads)

# TARGET_LINK_LIBRARIES(main ${CMAKE_THREAD_LIBS_INIT})